# affplay

./: README.md  local.properties
app/: build.gradle
app/apk/: output.json
app/src/androidTest/java/org/awing/affplay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniRuntime.cpp  JniRuntime.h  NativeFfplayer.cpp  cmdutils.c  config.h  ffplay.c  nlog.h
app/src/main/java/org/awing/affplay/: FfplaySdlActivity.java  Ffplayer.java  MainActivity.java  PlayerControllerView.java  TouchSlideManager.java
app/src/main/java/org/awing/affplay/util/: ChooseFileUtils.java  DisplayUtils.java  PermissionUtils.java
app/src/main/java/org/libsdl/app/: HIDDeviceBLESteamController.java  SDLActivity.java
app/src/main/res/drawable/: bg_pressed.xml
app/src/main/res/layout/: activity_main.xml  player_control_pannel.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/awing/affplay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
